# STT-TTS-Pipeline

./: .env.example  .gitignore  QUICKSTART.md  README.md  main.py  pyproject.toml
app/: config.py
app/api/: http.py  websocket.py
app/core/: asr.py  llm.py  tts.py  vad.py
app/models/: asr.py  asr_buffered.py  tts.py  vad.py
app/services/: audio.py  conversation.py  pipeline.py  streaming.py  tts_queue.py
app/utils/: audio.py  text.py
frontend/: README.md  app.js  gradio_app.py  index.html  style.css
models/: README.md
scripts/: download_models.py  test_components.py  test_local.py
tests/: test_components.py  test_pipeline.py  test_vad.py
